updated website link

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="info-item padd-15">
                   <p>Website: <span><a target="_blank"
-                        href="https://vivekchaubeyportfolio.netlify.app/">vivekchaubeyportfolio.netlify.app</a></span>
+                        href="https://vivekchaubey.netlify.app/">vivekchaubey.netlify.app</a></span>
                   </p>
                 </div>
                 <div class="info-item padd-15">
@@ -641,7 +641,7 @@
             <div class="contact-info-item padd-15">
               <div class="icon"><i class="fa fa-globe-europe"></i></div>
               <h4>Website</h4>
-              <p>vivekchaubeyportfolio.netlify.app</p>
+              <p>vivekchaubey.netlify.app</p>
             </div>
             <!-- contact info item end -->
           </div>
