updated email and cv

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   </p>
                 </div>
                 <div class="info-item padd-15">
-                  <p>Email: <span>vivekkumarchaubey79@gmail.com</span></p>
+                  <p>Email: <span>vivekchaubey0709@gmail.com</span></p>
                 </div>
                 <div class="info-item padd-15">
                   <p>Degree: <span>CSE (2017-21)</span></p>
@@ -634,7 +634,7 @@
             <div class="contact-info-item padd-15">
               <div class="icon"><i class="fa fa-envelope"></i></div>
               <h4>Email</h4>
-              <p>vivekkumarchaubey79@gmail.com</p>
+              <p>vivekchaubey0709@gmail.com</p>
             </div>
             <!-- contact info item end -->
             <!-- contact info item start -->
