--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   </p>
                 </div>
                 <div class="info-item padd-15">
-                  <p>Email: <span>vivekkumarchaubeychaubey79@gmail.com</span></p>
+                  <p>Email: <span>vivekkumarchaubey79@gmail.com</span></p>
                 </div>
                 <div class="info-item padd-15">
                   <p>Degree: <span>CSE (2017-21)</span></p>
