updated typescipt skill

--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5>JavaScript</h5>
+                  <h5>JavaScript & TypeScript</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 80%"></div>
                     <div class="skill-percent">80%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5>ReactJs</h5>
+                  <h5>ReactJs - Redux</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 96%"></div>
                     <div class="skill-percent">85%</div>
