--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                   <i class="fa fa-calendar"></i> July 2023 - Present
                                 </h3>
                                 <h4 class="timeline-title">
-                                  Gargi Vedic Pratishthan | Software Engineer
+                                  Freelance | Software Engineer
                                 </h4>
                                 <p class="timeline-text">
                                   Key responsibilities:
