updated info collector desc

--- a/index.html
+++ b/index.html
@@ -564,6 +564,9 @@ access to authorized users.
                   Application similar to Google Forms.It has 3 main features.The form creation page helps the user to design custom
                    forms consisting of MCQs, short & long ans type ques, checklists, rating ques, etc. Preview of the Form can be
                     seen before sending it. Data responded in the form is collected, managed, filtered & sorted using M-UI table.
+                    Visually appealing and highly interactive frontend
+                  applications. Use of React-Redux, Next Js, loaded with Javascript & TypeScript configurations. Material UI, Aceternity UI, Tailwind CSS and Framer Motions. Robust Error-Handling, Conditional Rendering features along with Dynamic Searching is
+                  experienced.
                 </p>
                 <br>
                 <a href="https://github.com/07vivek09/InfoCollector" target="_blank" class="btn">Github</a>
