--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="about-text padd-15">
                   <h3>I'm <span>Vivek Chaubey</span></h3>
                   <p>
-                    I'm a skilled MERN stack developer proficient in HTML, CSS, JavaScript, React, Next Js Node.js, and MongoDB,
+                    I'm a skilled Full stack developer proficient in MERN and Django development stacks,
                     adept at tackling complex tech challenges. With a knack for troubleshooting, I excel in
                     problem-solving.
                     Passionate about exploring the realm of data science, I possess a strong foundation in relevant
@@ -112,7 +112,7 @@
                   <p>Birthday: <span>7 September 1999</span></p>
                 </div>
                 <div class="info-item padd-15">
-                  <p>age: <span>24</span></p>
+                  <p>age: <span>25</span></p>
                 </div>
                 <div class="info-item padd-15">
                   <p>Website: <span><a target="_blank"
@@ -182,6 +182,13 @@
                   <h5>NodeJs with mongoDB</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 70%"></div>
+                    <div class="skill-percent">75%</div>
+                  </div>
+                </div>
+                <div class="skill-item padd-15">
+                  <h5>Django with MySQL/ PostgreSQL</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 70%"></div>
                     <div class="skill-percent">70%</div>
                   </div>
                 </div>
@@ -193,7 +200,7 @@
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5>DSA</h5>
+                  <h5>DSA & DBMS</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 70%"></div>
                     <div class="skill-percent">70%</div>
@@ -208,6 +215,20 @@
                 </div>
                 <div class="skill-item padd-15">
                   <h5>Rest APIs</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 70%"></div>
+                    <div class="skill-percent">70%</div>
+                  </div>
+                </div>
+                <div class="skill-item padd-15">
+                  <h5>AWS Cloud Platform</h5>
+                  <div class="progress">
+                    <div class="progress-in" style="width: 70%"></div>
+                    <div class="skill-percent">60%</div>
+                  </div>
+                </div>
+                <div class="skill-item padd-15">
+                  <h5>Gen - AI</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 70%"></div>
                     <div class="skill-percent">70%</div>
@@ -301,6 +322,10 @@
                                 <p class="timeline-text">
                                   Key responsibilities:
                                 <ul style="list-style: disc !important;">
+                                  <li>Experienced in Django for building scalable web applications with Python. Proficient in creating RESTful APIs, handling
+                                    ORM for database management, and implementing security best practices like user authentication and authorization.</li>
+                                  <li>Integrated static file handling for media content and built dynamic views to deliver a responsive and user-friendly interface</li>
+                                  <li>Leveraged AWS Lamda and Elastic Beanstalk for scalable deployment and ensured optimal performance.</li>
                                   <li>Developed reusable components to enhance code modularity and facilitate easier maintenance in Next Js</li>
                                   <li>Implemented responsive design principles using component libraries ( Material-UI, Schadcn UI, Aceternity UI ) and CSS
                                     frameworks (Bootstrap, Tailwind CSS) for a consistent user experience across device & cross browser compatibility.</li>
@@ -390,7 +415,7 @@
                 <h4>frontend</h4>
                 <p>
                   A frontend proficient with expertise in crafting responsive and user-centric interfaces. Skilled in
-                  HTML, CSS, JavaScript and ReactJs to create engaging web experiences. Experienced in optimizing UI/UX
+                  HTML, CSS, Tailwind CSS, UI Component Libraries, JavaScript, TypeScript, ReactJs, NextJs to create engaging web experiences. Experienced in optimizing UI/UX
                   for performance and accessibility.
                 </p>
               </div>
@@ -418,7 +443,7 @@
                 </div>
                 <h4>Backend</h4>
                 <p>
-                  I possess strong backend expertise utilizing the Node.js tech stack paired with MongoDB. Proficient in
+                  I possess strong backend expertise utilizing the Node.js tech stack paired with MongoDB and Django tech stack paired with MySQL/ PostgreSQL. Proficient in
                   implementing robust solutions and optimizing database performance. Skilled in designing and deploying
                   scalable applications.
                 </p>
@@ -530,6 +555,120 @@ messages, AI-powered suggestions, and OTP-based email verification. Leveraged Zo
               </div>
             </div>
             <!-- Portfolio item End -->
+
+             <!-- Portfolio item Start -->
+             <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-mobile-alt"></i>
+                </div>
+                <h4>Tweet App</h4>
+                <p>
+                  Developed a Twitter-like web application using Django, featuring customized user registration, login, and
+                  logout functionality with Django's built-in authentication system. Implemented custom forms using Django Forms for
+                  user input validation and error handling. Designed database models for managing tweets, user profiles, and
+                  relationships, with Django ORM for seamless database integration. Built views and templates to handle routing, rendering, and dynamic content. Integrated static image upload for user profiles and tweets, leveraging Django's static
+                  and media file handling. Managed URL routing for scalable application structure
+                </p>
+                <br>
+                <a href="https://github.com/07vivek09/django_TweetApp" target="_blank" class="btn">Github</a>
+                <br><br>
+                <a href="https://tweetercloneapp.netlify.app/signin" target="_blank" class="btn">Live Demo</a>
+              </div>
+            </div>
+            <!-- Portfolio item End -->
+
+             <!-- Portfolio item Start -->
+             <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-mobile-alt"></i>
+                </div>
+                <h4>Netflix Clone</h4>
+                <p>
+                  Developed a Netflix clone app using Django, featuring user authentication for secure access.
+                  Implemented video preview and 'add to list' functionality, allowing users to manage personalized watchlists. Designed
+                  search functionality for efficient content discovery, with Django ORM handling data management on a cloud-hosted
+                  PostgreSQL database. Leveraged AWS Elastic Beanstalk for scalable deployment and ensured optimal performance.
+                  Integrated static file handling for media content and built dynamic views to deliver a responsive and user-friendly
+                  interface
+                </p>
+                <br>
+                <a href="https://github.com/07vivek09/Netflix-Clone" target="_blank" class="btn">Github</a>
+                <br><br>
+                <a href="https://netflix-fullstack.vercel.app/" target="_blank" class="btn">Live Demo</a>
+              </div>
+            </div>
+            <!-- Portfolio item End -->
+
+             <!-- Portfolio item Start -->
+             <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-mobile-alt"></i>
+                </div>
+                <h4>React-Django Fullstack App</h4>
+                <p>
+                  Developed a full-stack web application using Django for the backend and React for
+                  the frontend. Implemented user authentication and session management using Django Rest Framework. Built robust
+                  CRUD functionality, with Django ORM handling data operations on a cloud-hosted PostgreSQL database. Designed
+                  APIs using Django Rest Framework and utilized serializers for data validation and transformation. Integrated React on
+                  the frontend for a dynamic, responsive user interface. Leveraged RESTful APIs for seamless communication between
+                  the React frontend and Django backend.
+                </p>
+                <br>
+                <a href="https://github.com/07vivek09/django_react_fullstack_website" target="_blank" class="btn">Github</a>
+                <br><br>
+                <a href="https://github.com/07vivek09/django_react_fullstack_website" target="_blank" class="btn">Live Demo</a>
+              </div>
+            </div>
+            <!-- Portfolio item End -->
+
+             <!-- Portfolio item Start -->
+             <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-mobile-alt"></i>
+                </div>
+                <h4>Spotify Clone</h4>
+                <p>
+                  Developed a Spotify clone app using Django, featuring user authentication for secure access.
+                  Integrated a custom Spotify Scraper API to collect song data in real-time. Implemented media controls including play, pause, seek, and 10-second forward/backward functionality, along with a progress bar for real-time song tracking. Built
+                  search functionality for efficient song discovery, and used web scraping techniques to retrieve album art and media
+                  assets. Managed data with Django ORM and a cloud-hosted PostgreSQL database. Deployed the application using
+                  AWS Lambda for serverless, scalable execution
+                </p>
+                <br>
+                <a href="https://github.com/07vivek09/Spotify-Clone" target="_blank" class="btn">Github</a>
+                <br><br>
+                <a href="https://spotify-clone-dv.vercel.app/" target="_blank" class="btn">Live Demo</a>
+              </div>
+            </div>
+            <!-- Portfolio item End -->
+
+             <!-- Portfolio item Start -->
+             <div class="service-item padd-15">
+              <div class="service-item-inner">
+                <div class="icon">
+                  <i class="fa fa-mobile-alt"></i>
+                </div>
+                <h4>Video to Text Summarizer</h4>
+                <p>
+                  Developed a video-to-text summarizer app using Django, featuring secure user
+                  authentication and session management. Integrated third-party API for video transcription and ChatGPT API for text
+                  summarization. Utilized Django ORM to manage data storage and retrieval with a cloud-hosted PostgreSQL database. Designed views and templates for dynamic content display and user interaction. Employed Django’s URL routing for
+                  efficient request handling and scalable architecture. Implemented robust error handling and optimized performance for
+                  API interactions and database queries
+                </p>
+                <br>
+                <a href="https://github.com/07vivek09/ai-youtube-summarizer" target="_blank" class="btn">Github</a>
+                <br><br>
+                <a href="https://you-tube-transcript-summarizer.vercel.app/" target="_blank" class="btn">Live Demo</a>
+              </div>
+            </div>
+            <!-- Portfolio item End -->
+
+
             <!-- Portfolio item Start -->
             <div class="service-item padd-15">
               <div class="service-item-inner">
