Updated with react django fullstack app description

--- a/index.html
+++ b/index.html
@@ -609,12 +609,12 @@ messages, AI-powered suggestions, and OTP-based email verification. Leveraged Zo
                 </div>
                 <h4>React-Django Fullstack App</h4>
                 <p>
-                  Developed a full-stack web application using Django for the backend and React for
-                  the frontend. Implemented user authentication and session management using Django Rest Framework. Built robust
-                  CRUD functionality, with Django ORM handling data operations on a cloud-hosted PostgreSQL database. Designed
-                  APIs using Django Rest Framework and utilized serializers for data validation and transformation. Integrated React on
-                  the frontend for a dynamic, responsive user interface. Leveraged RESTful APIs for seamless communication between
-                  the React frontend and Django backend.
+                  Developed a full-stack web application with Django REST Framework as the backend and React as the frontend.
+                   Implemented JWT token authentication for secure user login and session management.
+                    Built CRUD operations using Django serializers, including foreign key serialization for complex data relationships.
+                     Utilized Django REST Framework's APIView class to structure API endpoints and create robust models for database operations. 
+                     Integrated custom data validation logic within serializers to ensure data integrity.
+                      Managed data using a cloud-hosted PostgreSQL database and provided seamless communication between the React frontend and Django API..
                 </p>
                 <br>
                 <a href="https://github.com/07vivek09/django_react_fullstack_website" target="_blank" class="btn">Github</a>
