--- a/index.html
+++ b/index.html
@@ -157,15 +157,16 @@
                     <div class="skill-percent">90%</div>
                   </div>
                 </div>
+                
                 <div class="skill-item padd-15">
-                  <h5>JavaScript & TypeScript</h5>
+                  <h5>Tailwind CSS & UI Component Libraries</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 80%"></div>
                     <div class="skill-percent">80%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5>Tailwind CSS & UI Component Libraries</h5>
+                  <h5>JavaScript & TypeScript</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 80%"></div>
                     <div class="skill-percent">80%</div>
@@ -221,14 +222,14 @@
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5>AWS Cloud Platform</h5>
+                  <h5>AWS Cloud Practitioner</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 70%"></div>
                     <div class="skill-percent">60%</div>
                   </div>
                 </div>
                 <div class="skill-item padd-15">
-                  <h5>Gen - AI</h5>
+                  <h5>Gen AI & Prompt Engineering</h5>
                   <div class="progress">
                     <div class="progress-in" style="width: 70%"></div>
                     <div class="skill-percent">70%</div>
